fix(app): copy update, text formatting

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,7 +16,7 @@ const { src: momAndDaughterImageWebp } = await getImage({
 <Layout title="Power Passenger Passage | Contact">
   <header class="relative p-0">
     <div
-      class="w-full md:h-dvh bg-cover bg-center bg-no-repeat after:content-[''] after:absolute after:bottom-0 after:left-0 after:w-full after:h-full after:bg-gradient-to-b after:from-whiteTransparent after:to-white"
+      class="w-full md:h-dvh p-4 bg-cover bg-center bg-no-repeat after:content-[''] after:absolute after:bottom-0 after:left-0 after:w-full after:h-full after:bg-gradient-to-b after:from-whiteTransparent after:to-white"
       style={`background-image: url(${momAndDaughterImageWebp});`}
     >
       <div
@@ -26,7 +26,7 @@ const { src: momAndDaughterImageWebp } = await getImage({
         <h1 class="lsa lsa-slide-up no-repeat">
           <span class="font-bold text-xl text-red-900">Contact</span> Power Passenger Passage
         </h1>
-        <p class="text-base lsa lsa-slide-up no-repeat delay-200">
+        <p class="max-w-2xl text-base lsa lsa-slide-up no-repeat delay-200">
           We're here to guide you. Reach out here to start the conversation or schedule your free
           consultation!
         </p>
