--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,8 @@ const recentPosts = posts.slice(0, 3)
   description="Life coaching for preconception, pregnancy, and beyond. Experience your BEST pregnancy with life coaching."
 >
   <PageHeader
-    title='<span class="font-bold text-xl text-red-900">Life coaching</span> for preconception, pregnancy, and beyond'
-    subtitle="Experience your BEST pregnancy with life coaching"
+    title='<span class="font-bold text-xl text-red-900">Life Coaching</span> for Preconception, Pregnancy, and Beyond'
+    subtitle="Experience your BEST pregnancy with life coaching."
     image={momOneImage}
     imageAlt="A mom with her baby in the woods"
   >
@@ -79,7 +79,7 @@ const recentPosts = posts.slice(0, 3)
           From <span class="text-lg text-red-900 font-bold">Our Community</span>
         </h3>
 
-        <blockquote class="relative lsa lsa-slide-up no-repeat delay-700">
+        <blockquote class="relative px-4 md:px-0 lsa lsa-slide-up no-repeat delay-700">
           <span class="absolute -top-8 left-0 md:-top-12 md:-left-4 text-2xl text-red-900">“</span>
           <p class="mb-4">
             <em>
