feat(app): add favicon, upgrade Astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -88,7 +88,14 @@ const socialImageURL = new URL(socialImage || '/images/og-image.png', canonicalU
       crossorigin
     />
 
-    <!-- TODO: add favicon  -->
+    <!-- Favicon  -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Power Passenger Passage" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <!-- TODO: add analytics -->
   </head>
 
