feat(app): add Resend for newsletter emails

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -11,7 +11,7 @@ import Subscribe from './Subscribe.astro'
       <p>Stay up to date with the latest news, announcements, and articles.</p>
     </div>
 
-    <Subscribe />
+    <Subscribe formId="footer-subscribe" />
   </div>
 
   <!-- Main footer items -->
