--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -34,7 +34,7 @@ const remainingPosts = posts.slice(4)
     title='<span class="font-bold text-xl text-red-900">Empower</span> Your Healthcare Journey'
     subtitle="Explore insights and resources designed to guide women on their personal healthcare journey. From finding peace in pregnancy to reclaiming control of your well-being, our blog is here to inspire, inform, and empower."
   >
-    <Subscribe class="mx-auto" />
+    <Subscribe formId="blog-subscribe" class="mx-auto" />
   </PageHeader>
 
   <main class="bg-gradient-to-b from-white to-tan-100">
