--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -96,6 +96,8 @@
   --color-red-100: oklch(94.76% 0.014 355.01);
   --color-tan-100: #fff6f0;
   --color-tan-100: oklch(97.85% 0.01256189712240146 56.25631738338603);
+  --color-green: #2ca883;
+  --color-green: oklch(65.58% 0.1201 168.18);
 
   /* Font sizes: source (https://fluid-type.tolin.ski/) */
   --fs-2xs: clamp(0.64rem, 0.05vi + 0.63rem, 0.67rem);
