fix(app): add formId to navigation Subscribe component

--- a/src/components/ui/Navigation.astro
+++ b/src/components/ui/Navigation.astro
@@ -125,7 +125,7 @@ const currentPath = Astro.url.pathname
     <!-- Subscribe -->
     <div class="hidden custom-height-mq:group-[.active]:block absolute bottom-8 w-5/6 max-w-80">
       <p class="mb-4">Subscribe to our newsletter:</p>
-      <Subscribe />
+      <Subscribe formId="navigation-subscribe" />
     </div>
   </div>
 </nav>
