fix(app): add contact form action + success page

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -46,7 +46,7 @@ const { src: momAndDaughterImageWebp } = await getImage({
 
       <form
         class="relative max-w-2xl mx-auto"
-        action="/action"
+        action="/success/"
         method="post"
         name="contactForm"
         data-netlify="true"
