--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -62,7 +62,7 @@ const { src: momAndDaughterImageWebp } = await getImage({
                 name="First Name"
                 id="first-name"
                 class="w-full px-4 py-[clamp(0.5rem,2vi,1rem)] text-sm placeholder:text-grey-200 focus:outline-none focus:ring-2 focus:ring-red-500 shadow-sm border rounded-lg transition"
-                autocomplete="name"
+                autocomplete="given-name"
                 placeholder="First Name"
                 required
               />
@@ -75,7 +75,7 @@ const { src: momAndDaughterImageWebp } = await getImage({
                 name="Last Name"
                 id="last-name"
                 class="w-full px-4 py-[clamp(0.5rem,2vi,1rem)] text-sm placeholder:text-grey-200 focus:outline-none focus:ring-2 focus:ring-red-500 shadow-sm border rounded-lg transition"
-                autocomplete="name"
+                autocomplete="family-name"
                 placeholder="Last Name"
                 required
               />
