feat(app): subscribe user if checkbox is checked

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -144,3 +144,35 @@ const { src: momAndDaughterImageWebp } = await getImage({
     </section>
   </main>
 </Layout>
+
+<script>
+  const form = document.querySelector('form[name="contactForm"]') as HTMLFormElement
+
+  /**
+   * Handle form submission
+   * @param e Form submission event
+   */
+  async function submit(e: Event) {
+    e.preventDefault()
+
+    // Get form data and send to API
+    const formData = new FormData(form)
+
+    const subscribeValue = formData.get('Subscribe')
+
+    if (subscribeValue === 'on') {
+      const response = await fetch('/api/subscribe.json/', {
+        method: 'POST',
+        body: formData,
+      })
+      const data = await response.json()
+
+      console.log(data)
+    }
+
+    form.submit()
+  }
+
+  // Submit event listener
+  form.addEventListener('submit', submit)
+</script>
