fix(app): broken CTA hover transition

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -169,12 +169,9 @@ import Layout from '../layouts/Layout.astro'
           </article>
         </div>
 
-        <CTA
-          type="link"
-          href="/contact#schedule"
-          text="Book a Free Call"
-          class="m-auto lsa lsa-slide-up no-repeat delay-300"
-        />
+        <div class="lsa lsa-slide-up delay-300 no-repeat">
+          <CTA type="link" href="/contact#schedule" text="Book a Free Call" class="m-auto" />
+        </div>
       </div>
     </section>
   </main>
