--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -30,12 +30,9 @@ const { src: momAndDaughterImageWebp } = await getImage({
           We're here to guide you. Reach out here to start the conversation or schedule your free
           consultation!
         </p>
-        <CTA
-          class="mx-auto lsa lsa-slide-up no-repeat delay-500"
-          type="link"
-          href="/contact/#schedule"
-          text="Book Now"
-        />
+        <div class="lsa lsa-slide-up delay-500 no-repeat">
+          <CTA class="mx-auto" type="link" href="/contact/#schedule" text="Book Now" />
+        </div>
       </div>
     </div>
   </header>
