--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,12 +117,9 @@ const recentPosts = posts.slice(0, 3)
           title='Schedule Your <span class="font-bold text-lg text-red-900">Free Consultation</span> Now'
           class="items-start"
         >
-          <CTA
-            type="link"
-            href="/contact#schedule"
-            text="Book Now"
-            class="lsa lsa-slide-up delay-100 no-repeat"
-          />
+          <div class="lsa lsa-slide-up delay-100 no-repeat">
+            <CTA type="link" href="/contact#schedule" text="Book Now" />
+          </div>
         </SectionHeader>
 
         <!-- Desktop Image -->
